<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="nuricanozturk.dev.android.multipleactivity.viewmodel.PaymentActivityViewModel" />

        <import type="nuricanozturk.dev.android.multipleactivity.viewmodel.PaymentInfo" />

        <import type="nuricanozturk.dev.android.multipleactivity.binding.PaymentQuantityToStringConverter" />

        <import type="nuricanozturk.dev.android.multipleactivity.binding.PaymentInfoUnitPriceToString" />

        <variable
            name="paymentInfo"
            type="PaymentInfo" />

        <variable
            name="viewModel"
            type="PaymentActivityViewModel" />

        <import type="nuricanozturk.dev.android.multipleactivity.viewmodel.LoginInfoViewModel" />

        <variable
            name="loginInfoViewModel"
            type="LoginInfoViewModel" />

        <variable
            name="result"
            type="String" />

        <import type="java.time.format.DateTimeFormatter" />

        <import type="java.time.LocalDateTime" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PaymentActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{loginInfoViewModel.username}" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{DateTimeFormatter.ofPattern(&quot;dd/MM/yyyy HH:mm:ss&quot;).format(LocalDateTime.now())}" />


        <EditText
            android:id="@+id/activityPaymentEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_product_name_hint"
            android:text="@={paymentInfo.productName}" />

        <EditText
            android:id="@+id/activityPaymentEditTextUnitPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_product_price_hint"
            android:inputType="numberDecimal"
            android:text="@={PaymentInfoUnitPriceToString.toStr(paymentInfo.unitPrice)}" />

        <EditText
            android:id="@+id/activityPaymentEditTextQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_product_count_hint"
            android:inputType="numberSigned"
            android:text="@={PaymentQuantityToStringConverter.toStr(paymentInfo.quantity)}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handlePayButton()}"
            android:text="@string/button_pay" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleClearButton()}"
            android:text="@string/button_clear" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleExitButton()}"
            android:text="@string/button_exit" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleExitSystemButton()}"
            android:text="@string/button_exit_sys" />



        <TextView
            android:id="@+id/activityPaymentTextViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{result}" />
    </LinearLayout>
</layout>